2007-10-08  Wakaba  <wakaba@suika.fam.cx>

	* schema.cgi: "Add schema" button is added in "entries associated
	with a URI" mode.

2007-10-08  Wakaba  <wakaba@suika.fam.cx>

	* schema.cgi: Flush stdout in diff mode.

2007-08-21  Wakaba  <wakaba@suika.fam.cx>

	* schema.cgi (get_html_navigation): A backspace was not escaped.

2007-08-14  Wakaba  <wakaba@suika.fam.cx>

	* schema-add.en.html, schema.cgi: "Schema in another document" addition
	supported.

2007-08-14  Wakaba  <wakaba@suika.fam.cx>

	* schema-style.css: New file.  (Split from schema.cgi).

	* schema.cgi: Diff mode support.

2007-08-13  Wakaba  <wakaba@suika.fam.cx>

	* schema.cgi: Use |charset| property for Content-Type.

2007-08-13  Wakaba  <wakaba@suika.fam.cx>

	* schema-annotation.js: New file.

	* schema.cgi: Annotation implemented.

	* .htaccess: Don't allow anonymous DELETE.

2007-08-12  Wakaba  <wakaba@suika.fam.cx>

	* schema.cgi: Lists derived_from as well as ref.  Don't 
	set uri property if the soruce is Wakaba's temporary area.
	(set_map): Sort keys.

2007-08-12  Wakaba  <wakaba@suika.fam.cx>

	* schema.cgi: Use title for lists.  Resolve system
	identifiers in |ref| property.

2007-08-12  Wakaba  <wakaba@suika.fam.cx>

	* schema.cgi: Public and system identifiers and references
	are now supported in property view.
	List of URIs are now list/uri.html, no longer list.html.
	Likewise, list of entries for a URI is list/uri.html?,
	no longer uri.html?.
	Person list is added.

2007-08-12  Wakaba  <wakaba@suika.fam.cx>

	* schema.cgi, schema-add.en.html, prop-edit.en.html: Navigation
	links are updated.

2007-08-12  Wakaba  <wakaba@suika.fam.cx>

	* schema.cgi: DOM package name is replaced by a variable.

2007-08-12  Wakaba  <wakaba@suika.fam.cx>

	* schema.cgi: New file.

	* prop-edit.en.html: New file.

	* schema-add.en.html: New file.

	* ChangeLog: New file.

	* data/: New directory.

	* cvscommit.sh: New file.
