@@ -1,3 +1,7 @@
+2007-10-28  Wakaba  <wakaba@suika.fam.cx>
+
+	* schema.cgi: List of URIs doesn't list all of URIs once.
+
 2007-10-08  Wakaba  <wakaba@suika.fam.cx>
 
 	* schema.cgi: "Add schema" button is added in "entries associated
